feat: enhance order refund tracking and ui components
- add `:requested_refund_secret` to `ignore_attributes` in
  `gits.storefront.order` for better tracking.
- update `perform` function in `gits.storefront.order.notifiers.orderrefundrequested`
  to pass `actor` for improved job context.
- refactor navigation structure in `host.html.heex` for better
  readability and maintainability.
- simplify dashboard greeting in `gitsweb.hostlive.dashboard` to
  personalize user experience.
- adjust event listing header in `list_events.html.heex` for
  consistent styling.

--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -1,98 +1,116 @@
 <.flash_group flash={@flash} />
-<% navigation_items = [
-  %{
-    label: "Dashboard",
-    icon: "i-lucide-layout-dashboard",
-    current: Enum.any?([GitsWeb.HostLive.Dashboard], &(&1 == @socket.view)),
-    href: ~p"/hosts/#{@host_handle}/dashboard"
-  },
-  %{
-    label: "Events",
-    icon: "i-lucide-calendar-range",
-    current:
-      Enum.any?(
-        [GitsWeb.HostLive.ListEvents, GitsWeb.HostLive.ViewEvent, GitsWeb.HostLive.EditEvent],
-        &(&1 == @socket.view)
-      ),
-    href: ~p"/hosts/#{@host_handle}/events"
-  },
-  %{
-    label: "Orders",
-    icon: "hero-banknotes",
-    current:
-      Enum.any?(
-        [GitsWeb.HostLive.Orders],
-        &(&1 == @socket.view)
-      ),
-    href: ~p"/hosts/#{@host_handle}/orders"
-  },
-  %{
-    label: "Settings",
-    icon: "i-lucide-settings",
-    current: Enum.any?([GitsWeb.HostLive.Settings], &(&1 == @socket.view)),
-    href: ~p"/hosts/#{@host_handle}/settings"
-  }
+
+<% navigation = [
+  {"Home", "i-lucide-home", ~p"/hosts/#{@host.handle}/dashboard",
+   Enum.any?([GitsWeb.HostLive.Dashboard], &(&1 == @socket.view)), []},
+  {"Events", "i-lucide-calendar-range", ~p"/hosts/#{@host.handle}/events",
+   @socket.view == GitsWeb.HostLive.ListEvents,
+   [
+     {"New event", ~p"/hosts/#{@host.handle}/events/create-new", false},
+     {"All", ~p"/hosts/#{@host.handle}/events", @live_action == :all},
+     {"Drafts", ~p"/hosts/#{@host.handle}/events/drafts", @live_action == :drafts},
+     {"Published", ~p"/hosts/#{@host.handle}/events/published", @live_action == :published},
+     {"Archived", ~p"/hosts/#{@host.handle}/events/archived", @live_action == :archived}
+   ]}
 ] %>
 
 <% menus = [
-  [{"Settings", ~p"/settings/profile", false}],
-  [{"Sign out", ~p"/sign-out", false}]
+  [
+    {@current_user.email, nil, nil, false},
+    {"Profile", "i-lucide-user", ~p"/settings/profile", false}
+  ],
+  [
+    {"Organization", nil, nil, false},
+    {"Settings", "i-lucide-settings", ~p"/hosts/#{@host.handle}/settings", false}
+  ],
+  [{"Sign out", "i-lucide-log-out", ~p"/sign-out", false}]
 ] %>
 
-<div class="mx-auto flex min-h-dvh w-full max-w-screen-2xl gap-8">
-  <aside
-    class="fixed inset-0 z-10 hidden w-full flex-col gap-6 lg:static lg:flex lg:max-w-64"
-    id="sidebar"
-  >
-    <div class="flex items-center justify-between p-2">
-      <div class="inline-flex grow">
-        <.logo />
+<div class="grid h-dvh lg:grid-cols-[theme(space.64)_1fr]">
+  <aside class="hiddenx absolute inset-0 z-10 space-y-8 bg-white lg:static lg:block">
+    <div class="flex items-center px-4 py-2">
+      <div class="grow lg:py-1">
+        <div class="">
+          <.logo />
+        </div>
       </div>
-      <.button
-        size={:none}
-        variant={:ghost}
-        class="p-2 lg:hidden"
-        phx-click={JS.hide(to: "aside#sidebar")}
-      >
-        <.icon name="hero-x-mark" />
+
+      <.button phx-click={JS.hide(to: "aside")} size={:box} variant={:ghost} class="lg:hidden">
+        <.icon name="i-lucide-x" />
       </.button>
     </div>
-    <nav class="flex w-full flex-col gap-2">
-      <.link
-        :for={i <- navigation_items}
-        navigate={i.href}
-        replace={true}
-        aria-selected={"#{i.current}"}
-        class={[
-          "gap-2 inline-flex pr-4 pl-1 lg:px-0 group items-center text-zinc-500",
-          if(i.current,
-            do: "is-active ",
-            else: ""
-          )
-        ]}
+    <div class="grid gap-1">
+      <div
+        :for={{label, icon, href, current, children} <- navigation}
+        class="flex flex-wrap gap-y-2"
       >
-        <span class="h-6 w-1 rounded bg-zinc-500 opacity-0 group-aria-selected:opacity-100">
+        <.link
+          navigate={href}
+          aria-selected={"#{current}"}
+          class={[
+            "peer flex text-zinc-400 grow font-medium gap-3 peer/link rounded-l-lg px-2 py-3 hover:bg-zinc-50 lg:py-2 ml-0.5 aria-selected:text-zinc-900",
+            if(children == [], do: "lg:rounded-r-lg", else: "")
+          ]}
+        >
+          <.icon name={icon} />
+          <span>{label}</span>
+        </.link>
+
+        <span class="order-first w-1 rounded-r-lg peer-hover/link:bg-zinc-50 peer-aria-selected/link:bg-zinc-600">
         </span>
-        <div class="flex w-full items-center gap-3 rounded-lg px-2 py-4 group-hover:bg-zinc-50 group-[.is-active]:bg-zinc-100 group-[.is-active]:text-zinc-950 lg:py-2">
-          <.icon name={i.icon} class="size-5 shrink-0" />
-          <span class="text-sm font-semibold">{i.label}</span>
+
+        <%= if children != [] do %>
+          <input
+            type="checkbox"
+            checked={current}
+            class="peer/input sr-only"
+            id={"toggle-#{label}"}
+          />
+          <label
+            class="inline-flex p-3.5 hover:bg-zinc-50 peer-checked/input:hidden peer-hover/link:bg-zinc-50 lg:rounded-r-lg lg:p-2.5"
+            for={"toggle-#{label}"}
+          >
+            <.icon name="i-lucide-chevron-right" class="text-sm/4" />
+          </label>
+          <label
+            class="hidden p-3.5 hover:bg-zinc-50 peer-checked/input:inline-flex peer-hover/link:bg-zinc-50 lg:rounded-r-lg lg:p-2.5"
+            for={"toggle-#{label}"}
+          >
+            <.icon name="i-lucide-chevron-down" class="text-sm/4" />
+          </label>
+        <% end %>
+        <div
+          :for={{label, href, current} <- children}
+          class="hidden w-full pl-4 peer-checked/input:grid"
+        >
+          <.link
+            navigate={href}
+            aria-selected={"#{current}"}
+            class="inline-flex w-full rounded-l-lg px-2 py-3 pl-7 font-medium text-zinc-400 hover:bg-zinc-50 aria-selected:text-zinc-900 lg:rounded-r-lg lg:py-2"
+          >
+            <span class="pl-0.5">{label}</span>
+          </.link>
         </div>
-      </.link>
-    </nav>
+      </div>
+    </div>
   </aside>
-  <main class="mx-auto relative flex max-h-dvh w-full max-w-screen-xl grow flex-col gap-5 overflow-auto">
-    <div class="absolute right-0 flex items-center justify-between gap-4 p-2">
-      <.button
-        size={:none}
-        variant={:ghost}
-        class="p-2 lg:hidden"
-        phx-click={JS.show(to: "aside#sidebar", display: "flex")}
-      >
-        <.icon name="hero-bars-3" />
-      </.button>
+  <div class="overflow-auto">
+    <header class="sticky top-0 flex items-center gap-2 bg-white p-2 pr-4 shadow-sm lg:static lg:pl-0 lg:shadow-none">
+      <div class="flex grow items-center">
+        <.button :if={false} size={:box} variant={:ghost}>
+          <.icon name="i-lucide-home" />
+        </.button>
+        <.icon :if={false} name="i-lucide-chevron-right" class="text-zinc-600" />
+        <.button :if={false} size={:box} variant={:ghost}>
+          <span>Events</span>
+        </.button>
+        <.icon :if={false} name="i-lucide-chevron-right" class="text-zinc-600" />
+        <.button :if={false} size={:box} variant={:ghost} disabled>
+          <span>Events</span>
+        </.button>
+      </div>
 
       <div
-        class="relative grid"
         phx-click-away={
           JS.hide(
             to: "div#header-menu[role=menu]",
@@ -101,10 +119,11 @@
                "transform opacity-0 scale-95"}
           )
         }
+        class="relative"
       >
-        <button
-          size={:none}
-          variant={:surface}
+        <.button
+          size={:box}
+          variant={:ghost}
           phx-click={
             JS.toggle(
               to: "div#header-menu[role=menu]",
@@ -117,47 +136,57 @@
             )
           }
           id="menu-button"
-          class="size-9 rounded-full bg-zinc-200 overflow-hidden"
         >
-          <img src={Gits.Bucket.get_image_url(@current_user.avatar)} alt={@current_user.name} />
-        </button>
+          <.icon name="i-lucide-building-2" />
+          <span class="hidden lg:inline-flex">{@host.name}</span>
+          <.icon name="i-lucide-chevron-down" />
+        </.button>
+
         <div
           id="header-menu"
-          class="absolute right-0 top-full z-20 mt-2 hidden w-56 origin-top-right divide-y divide-zinc-100 rounded-md bg-white shadow-lg ring-1 ring-black/5 focus:outline-none"
+          class="absolute right-0 top-full z-20 hidden w-56 origin-top-right divide-y divide-zinc-100 rounded-md bg-white shadow-lg ring-1 ring-black/5 focus:outline-none"
           role="menu"
           aria-orientation="vertical"
           aria-labelledby="menu-button"
           tabindex="-1"
         >
-          <div :if={@current_user} class="px-4 py-3" role="none">
-            <p class="text-sm" role="none">Signed in as</p>
-            <p class="truncate text-sm font-medium text-zinc-900" role="none">
-              {@current_user.email}
-            </p>
-          </div>
           <div :for={{items, outer_index} <- Enum.with_index(menus)} class="py-1" role="none">
-            <.link
-              :for={{{name, href, badge}, index} <- Enum.with_index(items)}
-              navigate={href}
-              class="flex items-center justify-between px-4 py-2 text-sm text-zinc-700 hover:bg-zinc-50 active:bg-zinc-100 active:text-zinc-900 active:outline-none"
-              role="menuitem"
-              tabindex="-1"
-              id={"menu-item-#{outer_index}-#{index}"}
-            >
-              <span>{name}</span>
-              <span
-                :if={badge}
-                class="inline-flex items-center gap-x-1.5 rounded-md bg-white px-2 py-1 text-xs font-medium text-gray-900 ring-1 ring-inset ring-gray-200"
-              >
-                {badge}
-              </span>
-            </.link>
+            <%= for {{name, icon,href, badge}, index} <- Enum.with_index(items) do %>
+              <%= if href do %>
+                <.link
+                  navigate={href}
+                  class="flex items-center gap-2 px-4 py-2 text-sm font-medium text-zinc-700 hover:bg-zinc-50 active:bg-zinc-100 active:text-zinc-900 active:outline-none"
+                  role="menuitem"
+                  tabindex="-1"
+                  id={"menu-item-#{outer_index}-#{index}"}
+                >
+                  <.icon :if={icon} name={icon} />
+                  <span>{name}</span>
+                  <span
+                    :if={badge}
+                    class="inline-flex items-center gap-x-1.5 rounded-md bg-white px-2 py-1 text-xs font-medium text-gray-900 ring-1 ring-inset ring-gray-200"
+                  >
+                    {badge}
+                  </span>
+                </.link>
+              <% else %>
+                <div class="px-4 py-1" role="none">
+                  <p class="truncate text-sm text-zinc-400" role="none">
+                    {name}
+                  </p>
+                </div>
+              <% end %>
+            <% end %>
           </div>
         </div>
       </div>
-    </div>
 
-    {@inner_content}
-  </main>
+      <.button size={:box} variant={:ghost} phx-click={JS.show(to: "aside")} class="md:hidden">
+        <.icon name="i-lucide-menu" />
+      </.button>
+    </header>
+    <div class="lg:px-4">
+      {@inner_content}
+    </div>
+  </div>
 </div>
-<.footer />
