--- a/lib/gits_web/live/host_live/list_events.html.heex
+++ b/lib/gits_web/live/host_live/list_events.html.heex
@@ -1,12 +1,4 @@
-<div class="flex items-center gap-2 p-2">
-  <div class="flex w-full grow items-center gap-1 text-sm">
-    <div class="flex shrink-0 items-center truncate rounded-lg border border-transparent p-2 text-sm/5 font-semibold">
-      <span class="truncate ">
-        Events
-      </span>
-    </div>
-  </div>
-</div>
+<h1 class="p-2 text-xl font-semibold">Events</h1>
 
 <div class="flex items-center gap-4 p-2">
   <div class="flex grow gap-8 p-2 lg:p-0">
