--- a/lib/gits_web/live/host_live/view_event_templates/attendees.html.heex
+++ b/lib/gits_web/live/host_live/view_event_templates/attendees.html.heex
@@ -2,11 +2,20 @@
   <.table id="attendees" rows={@attendees}>
     <:col :let={attendee} label="Name">{attendee.name}</:col>
     <:col :let={attendee} label="Ticket">{attendee.ticket}</:col>
+    <:col :let={attendee} label="RSVP Date">
+      {attendee.rsvp_confirmed_at
+      |> DateTime.shift_zone!("Africa/Johannesburg")
+      |> Calendar.strftime("%I:%M %p, %d %B %Y")}
+    </:col>
 
-    <:action :let={_user}>
-      <button class="border size-9 text-sm inline-flex items-center justify-center rounded-lg">
-        <.icon name="i-lucide-ellipsis" />
-      </button>
-    </:action>
+    <:col :let={attendee} label="Admittion Date">
+      {if(attendee.admitted_at,
+        do:
+          attendee.admitted_at
+          |> DateTime.shift_zone!("Africa/Johannesburg")
+          |> Calendar.strftime("%I:%M %p, %d %B %Y"),
+        else: ""
+      )}
+    </:col>
   </.table>
 </div>
