--- a/lib/gits_web/live/host_live/settings.html.heex
+++ b/lib/gits_web/live/host_live/settings.html.heex
@@ -44,7 +44,7 @@
           <dt class="text-sm/6 grow  text-zinc-500">Logo</dt>
           <dd class="size-12 rounded-md bg-zinc-200 overflow-hidden">
             <img
-              src={Gits.Bucket.get_image_url(@host.logo)}
+              src={Gits.Bucket.get_image_url!(@host.logo)}
               alt={@host.name}
               class="size-full object-cover"
             />
