feat: add image upload function and update styles
- introduced `upload_image` function in `gits.bucket` for future
  image upload functionality.
- updated image class in `home.html.heex` to improve styling
  consistency and visual appeal.

--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -41,7 +41,7 @@
         <img
           src={Gits.Bucket.get_image_url!(event.poster)}
           alt={event.name}
-          class="size-full scale-125 bg-green-200"
+          class="size-full scale-125 bg-zinc-50"
         />
       </.link>
       <div class="space-y-1 truncate">
