feat: simplify image url retrieval and upload process
- refactor `get_image_url/1` to return a string directly
- update `upload_image/1` to streamline image upload logic
- replace `get_image_url!/1` calls with `get_image_url/1` in templates
- remove unused hash generation code in `handle_event/3`

--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -39,7 +39,7 @@
         class="aspect-[3/2] w-full overflow-hidden rounded-xl bg-red-100 focus-visible:ring-2 focus-visible:ring-zinc-200 lg:rounded-2xl"
       >
         <img
-          src={Gits.Bucket.get_image_url!(event.poster)}
+          src={Gits.Bucket.get_image_url(event.poster)}
           alt={event.name}
           class="size-full scale-125 bg-zinc-50"
         />
