--- a/lib/gits_web/live/host_live/list_events.html.heex
+++ b/lib/gits_web/live/host_live/list_events.html.heex
@@ -18,7 +18,7 @@
   <div class="divide-y divide-zinc-100 p-2">
     <div :for={event <- @events} class="flex items-center gap-4 py-4">
       <.link class="aspect-[3/2] h-20 shrink-0 overflow-hidden rounded-xl bg-zinc-200">
-        <img src={Gits.Bucket.get_image_url!(event.poster)} alt="Event poster" class="size-full" />
+        <img src={Gits.Bucket.get_image_url(event.poster)} alt="Event poster" class="size-full" />
       </.link>
       <div class="grid w-full grow gap-1.5">
         <.link class="overflow-hidden">
@@ -46,7 +46,7 @@
         navigate={~p"/hosts/#{@host_handle}/events/#{event.public_id}"}
         class="aspect-[3/2] h-20 shrink-0 overflow-hidden rounded-xl bg-zinc-200"
       >
-        <img src={Gits.Bucket.get_image_url!(event.poster)} alt="Event poster" class="size-full" />
+        <img src={Gits.Bucket.get_image_url(event.poster)} alt="Event poster" class="size-full" />
       </.link>
       <div class="grid w-full grow gap-1.5">
         <.link
