feat: migrate to vite and update font handling
- replace `@font-face` declarations for `poppins` and `inter` with
  `unplugin-fonts` for better font management.
- update css imports to use `@tailwind` directives for tailwind css.
- remove obsolete `esbuild` and `tailwind` configurations from `mix.exs`.
- add `vite.config.ts` for vite build configuration.
- update package dependencies for compatibility with new setup.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,81 +1,8 @@
 @import url("../node_modules/quill/dist/quill.snow.css");
 
-
-
-@font-face {
-  font-family: "Inter";
-  src: url("/fonts/Inter_var.ttf") format("truetype-variations");
-  font-weight: 100 1000;
-  font-stretch: 25% 151%;
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: italic;
-  font-weight: 900;
-  src: url("/fonts/Poppins-BlackItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 700;
-  src: url("/fonts/Poppins-Bold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 600;
-  src: url("/fonts/Poppins-SemiBold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 500;
-  src: url("/fonts/Poppins-Medium.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 400;
-  src: url("/fonts/Poppins-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 300;
-  src: url("/fonts/Poppins-Light.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: italic;
-  font-weight: 300;
-  src: url("/fonts/Poppins-LightItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 100;
-  src: url("/fonts/Poppins-Thin.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Poppins";
-  font-style: italic;
-  font-weight: 100;
-  src: url("/fonts/Poppins-ThinItalic.ttf") format("truetype");
-}
-
-
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @layer base {
   a, button, input {
