feat: update qr code handling and include library
- change `html5qrcode` and `html5qrcodesupportedformats`
  to use `window.html5qrcode` for better compatibility.
- add script tag for loading `html5-qrcode` library
  directly in `root.html.heex` to ensure availability.

--- a/lib/gits_web/components/layouts/root.html.heex
+++ b/lib/gits_web/components/layouts/root.html.heex
@@ -13,6 +13,8 @@
     <Gits.Turnstile.script />
     <script defer phx-track-static type="module" src={~p"/assets/app.js"}>
     </script>
+    <script src="https://unpkg.com/html5-qrcode" type="text/javascript">
+    </script>
   </head>
 
   <body class="font-poppins min-h-dvh leading-tight antialiased bg-white dark:bg-black">
